. fix styling of changes pages . make .css files readable
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@682697 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/cocoon-thien-maven-site-skin/src/main/resources/css/maven-base.css
+++ b/site/cocoon-thien-maven-site-skin/src/main/resources/css/maven-base.css
@@ -6,9 +6,9 @@
  * to you under the Apache License, Version 2.0 (the
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
- * 
+ *
  *  http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -16,29 +16,30 @@
  * specific language governing permissions and limitations
  * under the License.
  */
- 
 body {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
+#content div.main {
+    margin: 0 20px 0 185px;
+}
 /* mimic contentBody in site.css */
 .section {
-   	margin: 0 20px 0 185px;
-	padding: 0;
+    margin: 0 20px 0 0px;
+    padding: 0;
 }
 /* reverse for subsections */
-
 .section .section {
-   margin: 0;
+    margin: 0;
 }
 
 img {
-  border: none;
+    border: none;
 }
 
 acronym {
-  cursor: help;
-  border-bottom: 1px dotted #0086b3;
+    cursor: help;
+    border-bottom: 1px dotted #0086b3;
 }
 
