--- a/site/cocoon-thien-maven-site-skin/src/main/resources/css/maven-theme.css
+++ b/site/cocoon-thien-maven-site-skin/src/main/resources/css/maven-theme.css
@@ -16,64 +16,66 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 select, input {
-  color:#626262;
+    color: #626262;
 }
-
 /* code is equal to pre in site.css */
-
 code {
-	border:1px solid #aaaaaa;
-	background: #efefef;
-	font-size: 110%;
-	padding:10px;
+    border: 1px solid #aaaaaa;
+    background: #efefef;
+    font-size: 110%;
+    padding: 10px;
 }
+
 li code, td code {
-	border:0px;
-	font-size: 110%;
-	background: transparent;
-	padding:0px;
+    border: 0px;
+    font-size: 110%;
+    background: transparent;
+    padding: 0px;
 }
 
 #legend li.externalLink {
-  background: url(../images/external.png) left top no-repeat;
-  padding-left: 18px;
-}
-a.externalLink, a.externalLink:link, a.externalLink:visited, a.externalLink:active, a.externalLink:hover {
-  background: url(../images/external.png) right center no-repeat;
-  padding-right: 18px;
-}
-#legend li.newWindow {
-  background: url(../images/newwindow.png) left top no-repeat;
-  padding-left: 18px;
-}
-a.newWindow, a.newWindow:link, a.newWindow:visited, a.newWindow:active, a.newWindow:hover {
-  background: url(../images/newwindow.png) right center no-repeat;
-  padding-right: 18px;
+    background: url(../images/external.png) left top no-repeat;
+    padding-left: 18px;
 }
 
-p { margin: 0.4em 0em 0.5em 0em;
+a.externalLink, a.externalLink:link, a.externalLink:visited, a.externalLink:active, a.externalLink:hover {
+    background: url(../images/external.png) right center no-repeat;
+    padding-right: 18px;
+}
+
+#legend li.newWindow {
+    background: url(../images/newwindow.png) left top no-repeat;
+    padding-left: 18px;
+}
+
+a.newWindow, a.newWindow:link, a.newWindow:visited, a.newWindow:active, a.newWindow:hover {
+    background: url(../images/newwindow.png) right center no-repeat;
+    padding-right: 18px;
+}
+
+p {
+    margin: 0.4em 0em 0.5em 0em;
     line-height: 1.35em;
 }
 
 table.bodyTable th {
-	background: #0086b3;
-	color: #fff;
+    background: #0086b3;
+    color: #fff;
 }
 
 table.bodyTable tr.b {
-  background: #cce7f0;
+    background: #cce7f0;
 }
 
 .subsectionTitle {
-  font-size: 13px;
-  font-weight: bold;
-  color: #666;
+    font-size: 13px;
+    font-weight: bold;
+    color: #666;
 }
 
 .pl-version-small {
-  font-size:70%;
+    font-size: 70%;
 }
 
 .errormark, .warningmark, .donemark, .infomark {
@@ -81,18 +83,19 @@ table.bodyTable tr.b {
     padding: 0 0 0 45px;
     border: 1px solid #9bcd52;
 }
+
 .errormark {
-   background: url(../images/errors.gif) no-repeat 10px 7px;
+    background: url(../images/errors.gif) no-repeat 10px 7px;
 }
 
 .warningmark {
-  background: url(../images/warning.gif) no-repeat 10px 7px;
+    background: url(../images/warning.gif) no-repeat 10px 7px;
 }
 
 .donemark {
-  background-image: url(../images/icon_success_sml.gif) no-repeat 10px 7px;
+    background-image: url(../images/icon_success_sml.gif) no-repeat 10px 7px;
 }
 
 .infomark {
-  background: url(../images/note.gif) no-repeat 10px 7px;
+    background: url(../images/note.gif) no-repeat 10px 7px;
 }
